--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -85,10 +85,10 @@ jobs:
               echo $PACKER_PID
               echo "packer process"
               
-              kill $PACKER_PID INT
+              kill -INT $PACKER_PID
               cat packer-output.txt
               echo "sleeping.........."
-              #sleep 3m
+              sleep 1m
               cat packer-output.txt
               ps aux | grep packer
               #VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
