--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -41,6 +41,7 @@ jobs:
               gcloud components update --quiet
               gcloud auth list
               gcloud version
+              gcloud compute images list --no-standard-images
       
       - name: Configure Packer
         run: |
@@ -66,6 +67,7 @@ jobs:
               ls -altr
               cd ${{ inputs.build-path }}
               ls -altr
+              
               packer build -debug -timestamp-ui --var commit_sha=$GITHUB_SHA ./image.pkr.hcl
               
                
