--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -41,7 +41,7 @@ jobs:
               gcloud components update --quiet
               gcloud auth list
               gcloud version
-              gcloud config set auth/impersonate_service_account test-packer@burner-racgupta1.iam.gserviceaccount.com
+              gcloud config set auth/impersonate_service_account test-packer@burner-racgupta1.iam.gserviceaccount.com --quiet
               gcloud auth application-default login --impersonate-service-account test-packer@burner-racgupta1.iam.gserviceaccount.com
               gcloud compute images list --no-standard-images --impersonate-service-account="test-packer@burner-racgupta1.iam.gserviceaccount.com"
               gcloud compute images list --no-standard-images
