--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Packer fmt
         run: |
               cd ${{ inputs.build-path }}
-              packer fmt -recursive .
+              #packer fmt -recursive .
 
       - name: Run `packer init`
         id: init
