--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -56,13 +56,14 @@ jobs:
               
                
         
-      - name: List Summanry
+      - name: List Summanry and push
         run: |
               cd ${{ inputs.build-path }}
               ls -altr
               
               IMG_NAME=$(cat packer-output.txt | sed -n -e "s/^.* A disk image was created: //p")
               echo $IMG_NAME
+              gcloud compute images create $IMG_NAME --source-image=$IMG_NAME --source-image-project=burner-racgupta1 --project=sandbox-dev-dbg
               echo "Image Created $IMG_NAME" >> $GITHUB_STEP_SUMMARY
       - name: Cleanup
         if: cancelled() # Check if the job has been cancelled
