--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: PRD
     steps:
       - name: Checkout
         uses: actions/checkout@v2
